# ProyectoFIS-Backend

./: pyproject.toml  requirements.txt
categories/migrations/: 0001_initial.py
icard/: settings.py  urls.py
orders/migrations/: 0001_initial.py  0002_initial.py
payments/migrations/: 0001_initial.py
products/migrations/: 0001_initial.py
tables/migrations/: 0001_initial.py
users/: managers.py  models.py
users/api/: serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
